<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6727B0"
    tools:context=".ui.movie.CreateMovieFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="321dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/insert_qualification_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/card_layout"
            android:hint="@string/calification" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="321dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/insert_description_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/card_layout"
            android:hint="@string/description" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="321dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/insert_category_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/card_layout"
            android:hint="@string/category" />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/new_movie"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_title1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="321dp"
        android:layout_height="60dp"
        android:layout_marginTop="76dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/insert_name_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/card_layout"
            android:hint="@string/name" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit_movie_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/submit"
        android:backgroundTint="@color/card_layout"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout4"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />
</androidx.constraintlayout.widget.ConstraintLayout>