<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.movie.BillboardFragment"
    >
    <data>
        <variable
            name="viewmodel"
            type="com.example.laboratorio05_quezada.ui.movie.MovieViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#6727B0"
        >

        <!-- TODO: Update blank fragment layout -->

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="88dp"
            android:text="@string/billboard"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_to_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="7dp"
            android:backgroundTint="@color/card_layout"
            android:clickable="true"
            android:contentDescription="@string/add_new_movie"
            android:src="@drawable/baseline_add_24"
            app:backgroundTint="#9C27B0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/action_to_movie"
            android:layout_width="@dimen/movie_card_width"
            android:layout_height="@dimen/movie_card_height"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/card_layout"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/movie_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="128dp"
                    android:layout_height="92dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="44dp"
                    android:layout_marginBottom="44dp"
                    android:src="@drawable/star_wars"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="@dimen/text_body_width"
                    android:layout_height="@dimen/text_body_height"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="26dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/star_wars_episodio_3_la_venganza_de_los_sith"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_body"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/_9_8"
                    android:textColor="@color/score_text_color"
                    android:textSize="@dimen/text_size_title2"
                    app:layout_constraintEnd_toEndOf="@+id/textView3"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
